[s390] C1: assert(is_bound() || is_unused()) failed: Label was never bound to a location, but it was used as a jmp target

XMLWordPrintable

    • b14
    • s390x

        The assertion in the Label destructor fires on s390:
        assert(is_bound() || is_unused()) failed: Label was never bound to a location, but it was used as a jmp target

        Stack:
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x29d650] Label::~Label()+0x38
        V [libjvm.so+0x4ade58] LIR_Assembler::emit_opTypeCheck(LIR_OpTypeCheck*)+0x720
        V [libjvm.so+0x485d40] LIR_OpTypeCheck::emit_code(LIR_Assembler*)+0x30
        V [libjvm.so+0x497b66] LIR_Assembler::emit_lir_list(LIR_List*)+0xe6
        V [libjvm.so+0x498802] LIR_Assembler::emit_code(BlockList*)+0x202

        JCK-Tests:
        api/java_util/StringJoiner

              Assignee:
              Martin Doerr
              Reporter:
              Martin Doerr
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: